[workspace]
resolver = "2"
members = ["deduplicator-core", "deduplicator-cli"]
default-members = ["deduplicator-cli"]

[workspace.package]
name = "deduplicator"
version = "0.1.7"
edition = "2021"
description = "find,filter,delete Duplicates"
license = "MIT"
authors = [
    "Sreedev Kodichath <sreedevpadmakumar@gmail.com>",
    "Valentin Bersier <vbersier@gmail.com>",
    "Dhruva Sagar <dhruva.sagar@gmail.com>",
]
